# ai-coding-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
docs/adr/: 0000-adr-template.md  0001-project-vision-scope-constraints.md  0002-repository-structure-and-package-organization.md  0003-pipeline-business-model.md  0004-stage-1-design-flow.md  0005-operation-log-schema.md  0006-multi-project-cross-project-routing.md  0007-template-library.md  0008-session-and-conversation-model.md  0009-agent-core.md  0010-context-layer-three-tier.md  0011-compactor.md  0012-skill-loader.md  0013-tool-registry.md  0014-llm-adapter.md  0015-observability.md  0016-configuration-management.md  0017-error-handling-taxonomy.md  0018-testing-strategy.md  0019-storage-layer.md  0020-memory-store-four-layer.md  0021-rag-engine.md  0022-neo4j-graph-integration.md  0023-memory-governance.md  0024-grounding-and-hallucination-prevention.md  0025-guardrail-layer.md  0026-web-dashboard-surface.md  0027-daemon-lifecycle.md  0028-jira-workflow-specification.md  0029-jira-reaction-mechanism.md  0030-v0.2-lite-profile.md  README.md
migrations/sqlite/: alembic.ini  env.py
migrations/sqlite/versions/: 20260520_0001_initial_lite_schema.py
src/ai_coding_cli/: __init__.py  agent.py  cli.py  config.py  llm.py
src/ai_coding_cli/application/: __init__.py
src/ai_coding_cli/application/jira_reaction/: __init__.py  _reactor.py
src/ai_coding_cli/application/operation_log/: __init__.py  _reader.py  _schema.py  _writer.py
src/ai_coding_cli/application/pipeline/: __init__.py  _context.py  _event.py  _handler.py  _orchestrator.py  _state_machine.py
src/ai_coding_cli/application/pipeline/stages/: __init__.py
src/ai_coding_cli/application/pipeline/stages/design/: __init__.py  _brownfield.py  _handler.py  _prompts.py
src/ai_coding_cli/foundation/: __init__.py
src/ai_coding_cli/foundation/agent/: __init__.py  _agent.py  _result.py
src/ai_coding_cli/foundation/compactor/: __init__.py  _compactor.py
src/ai_coding_cli/foundation/config/: __init__.py  _loader.py  _models.py
src/ai_coding_cli/foundation/context/: __init__.py  _builder.py  _static_prefix.py  _system_prompt.py  system_prompt.md
src/ai_coding_cli/foundation/errors/: __init__.py  _base.py  _codes.py  _leaves.py  _registry.py
src/ai_coding_cli/foundation/guardrail/: __init__.py  _chain.py
src/ai_coding_cli/foundation/llm/: __init__.py  _adapter.py  _factory.py  _mock.py  _openai_compat.py
src/ai_coding_cli/foundation/session/: __init__.py  _manager.py  _types.py
src/ai_coding_cli/foundation/skills/: __init__.py  _loader.py  _parser.py  _scope.py  _types.py
src/ai_coding_cli/foundation/storage/: __init__.py  _engine.py  _models.py
src/ai_coding_cli/foundation/tools/: __init__.py  _context.py  _decorator.py  _mock_registry.py  _registry.py  _result.py  _side_effects.py  _tool.py
src/ai_coding_cli/foundation/tools/mcp/: __init__.py  _bridge.py  _config.py  _manager.py
src/ai_coding_cli/foundation/tools/native/: __init__.py  _clients.py  git_tools.py  github_tools.py  jira_tools.py  repo_tools.py  test_tools.py
src/ai_coding_cli/prompts/: system.md
src/ai_coding_cli/tools/: mcp_client.py
src/ai_coding_cli/web/: __init__.py  _app.py
src/ai_coding_cli/web/routes/: health.py  home.py  operation_logs.py  sessions.py  tickets.py
src/ai_coding_cli/web/templates/: base.html  conversation_detail.html  home.html  operation_log_detail.html  operation_log_integrity_error.html  session_detail.html  ticket_detail.html  tickets_list.html
tests/: conftest.py
tests/unit/application/: test_design_handler.py  test_jira_reactor.py  test_operation_log.py  test_pipeline_orchestrator.py
tests/unit/foundation/: test_agent.py  test_compactor.py  test_config.py  test_context_builder.py  test_errors.py  test_guardrail.py  test_llm_adapter.py  test_mcp_bridge.py  test_native_tools_smoke.py  test_session_manager.py  test_skills.py  test_storage.py  test_tool_registry.py
tests/unit/web/: test_dashboard.py
