[project]
name = "ai-coding-cli"
version = "0.1.0"
description = "Self-contained AI Coding Agent CLI. ReAct loop + MCP tool calling + OpenAI-compatible LLM. Drives the ai-coding-workflow pipeline (Jira → design → impl → review → test → deploy) without any IDE Agent dependency."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Taven" },
]
dependencies = [
    "openai>=1.40.0",
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
ai-coding = "ai_coding_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_coding_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/ai_coding_cli/prompts" = "ai_coding_cli/prompts"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
