[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ai-coding-cli"
version = "0.2.0.dev0+lite"
description = "Single-user AI Coding Agent CLI + local Dashboard. Drives the AI Coding Workflow pipeline (Jira -> design -> code -> review -> test -> deploy) on the developer's own machine."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Taven" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    # CLI + UX
    "typer>=0.12.0",
    "rich>=13.7.0",

    # HTTP server / Dashboard
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",

    # LLM
    "openai>=1.50.0",
    "tiktoken>=0.7.0",

    # MCP
    "mcp>=1.0.0",

    # Config + validation
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # Storage
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.6",
    "python-frontmatter>=1.1.0",

    # External integrations
    "atlassian-python-api>=3.41.0",
    "PyGithub>=2.4.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",

    # Templates + code parsing
    "PyYAML>=6.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.4.0",

    # Observability
    "structlog>=24.0.0",

    # Cross-platform process management
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-randomly>=3.15.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "syrupy>=4.6.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML",
    "types-psutil",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.scripts]
ai-coding = "ai_coding_cli.cli:app"

[project.urls]
Homepage = "https://github.com/wenttt/ai-coding-cli"
Repository = "https://github.com/wenttt/ai-coding-cli"
Issues = "https://github.com/wenttt/ai-coding-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_coding_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/ai_coding_cli/application/templates" = "ai_coding_cli/application/templates"
"src/ai_coding_cli/web/templates" = "ai_coding_cli/web/templates"
"src/ai_coding_cli/web/static" = "ai_coding_cli/web/static"
"migrations" = "ai_coding_cli/_migrations"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "migrations/sqlite/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "PIE", # misc
    "RET", # return
    "ARG", # unused arguments
    "PTH", # use pathlib
]
ignore = [
    "E501",  # line too long; ruff format handles it
    "B008",  # function calls in defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "N802"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "src.ai_coding_cli.foundation.*"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=ai_coding_cli",
    "--cov-report=term-missing",
    "--cov-report=html:.coverage_html",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["src/ai_coding_cli"]
omit = [
    "src/ai_coding_cli/_migrations/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
